force-app/main/default/objects/Address_Route_Assignment__c/Address_Route_Assignment__c.object-meta.xml
<CustomObject>
    <label>Address Route Assignment</label>
    <nameField>
        <displayFormat>ADA-{00000}</displayFormat>
        <label>Address Route Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Route Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>