force-app/main/default/objects/Address_Route_Assignment__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Address Route Assignments</relationshipLabel>
    <relationshipName>Address_Route_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>