force-app/main/default/objects/Address_Route_Assignment__c/fields/Delivery_Route__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Route</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Pickup_Delivery_Route__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Delivery</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pickup_Delivery_Route__c</referenceTo>
    <relationshipLabel>Address Route Assignments (Delivery Route)</relationshipLabel>
    <relationshipName>Address_Route_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>