force-app/main/default/objects/Address_Route_Assignment__c/fields/Is_Last_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Last Assignment</label>
    <type>Checkbox</type>
</CustomField>