force-app/main/default/objects/Address_Route_Assignment__c/fields/Pickup_Route__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup  Route</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Pickup_Delivery_Route__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Pickup</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pickup_Delivery_Route__c</referenceTo>
    <relationshipLabel>Address Route Assignments</relationshipLabel>
    <relationshipName>Address_Route_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>